# GetMyEBook-Web

./: .env.example  .gitignore  DISCUSSION_INTEGRATION_EXAMPLES.md  DISCUSSION_README.md  Discussion Forum Project.md  FILES_CREATED.md  GDrive-doc.md  MIGRATIONS.md  README.md  README_DISCUSSION.md  add_book_id_column.sql  app.db.backup.20251204_173312  app.py  auto_create_threads.py  chacking.py  debug_forum.py  discussion_forum_schema.sql  messages.pot  migrate_add_book_id.py  optional-requirements.txt  pyproject.toml  requirements.txt  setup_discussion_forum.sh
cps/: __init__.py  about.py  admin.py  auto_create_threads.py  aws_s3_admin.py  babel.py  babel_bkp.py  cli.py  config_sql.py  constants.py  create_metadata_psql.py  db.py  discussion_api.py  discussion_models.py  discussion_routes.py  editbooks.py  file_helper.py  gdriveutils.py  helper.py  logger.py  main.py  oauth_bb.py  opds.py  schedule.py  search.py  server.py  setup_manager.py  ub.py  updater.py  utils.py  web.py
cps/cw_login/: utils.py
cps/discussion/: README.md  __init__.py  api.py  models.py  routes.py
cps/forum/: __init__.py  auth_bridge.py  context_processor.py  package-lock.json
cps/models/: __init__.py  authors.py  base.py  comments.py  db.py  identifiers.py  libraryId.py  metadatadb.py  ratings.py  settings.py  tags.py  ub.py
docs/: FORUM_BOOK_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETED.md  QUICK_START.md  TRANSLATION_GUIDE.md
migrations/: create_aws_credentials.py  env.py
scripts/: cleanup_old_discussion_files.sh  migrate_forum_db.py  setup_discussion_forum.sh
(+187 files in other folders)
